# btc-puzzles

./: .gitignore  ARCHITECTURE.md  README.md  apple_silicon_rho.py  gpu.md  poc.md  puzzles.json  pyproject.toml  pytest.ini  requirements.txt
profiles/: solve.ini  solve_gpu.ini  verify.ini  verify_cpu.ini  verify_gpu.ini
src/: config_manager.py  cryptography_utils.py  distinguished_points.py  gpu_executor.py  hop_strategy.py  kangaroo.py  kangaroo_runner.py  kangaroo_runner_cpu.py  kangaroo_runner_gpu.py  main.py  metal_runner.py  metal_utils.py
src/metal/: field.metal  field_basic.metal  field_modular.metal  group.metal  int128.metal  kangaroo_hop.metal  kangaroo_kernels.metal
test/: secp256k1_test_vectors.json  test_config_manager.py  test_cryptography_utils.py  test_distinguished_points.py  test_gpu_executor.py  test_hop_strategy.py  test_kangaroo.py  test_kangaroo_runner.py  test_kangaroo_runner_cpu.py  test_kangaroo_runner_gpu.py  test_main.py  test_metal_field.py  test_metal_kangaroo.py  test_metal_runner.py
test/metal/: test_field.metal
test/utils/: generate_curve_points.py
