[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "btc-puzzle-solver"
version = "0.0.1"
description = "A Pollard's Kangaroo solver for the Bitcoin puzzle challenges."
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "gpu: marks tests as requiring a GPU to run",
]
